--- a/quinzena3/sistema-loja/ctrl-estoque.html
+++ b/quinzena3/sistema-loja/ctrl-estoque.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Controle de Estoque</title>
   </head>
   <body>
-    <div>
-      <p>Konoha Store</p>
+    <header class="header">
+      <div class="header-search">
+        <span class="header-logo"> Ecommerce</span>
+        <input type="search" name="search" id="search" placeholder="Buscar" />
+      </div>
+    </header>
+    <div class="header-navigation">
+      <nav class="menu">
+        <ul class="menu-list">
+          <li><a href="index.html">Página Inicial</a></li>
+          <li><a href="ctrl-estoque.html">Controle de Estoque</a></li>
+          <li><a href="add-produto.html">Adicionar Produto</a></li>
+          <li><a href="funcionarios.html">Funcionários</a></li>
+        </ul>
+      </nav>
     </div>
-
     <div>
-      <a href="index.html">Página Inicial</a>
-      <a href="ctrl-estoque.html">Controle de Estoque</a>
-      <a href="add-produto.html">Adicionar Produto</a>
-      <a href="funcionarios.html">Funcionários</a>
-    </div>
 
     <h2>Controle de Estoque</h2>
 
@@ -64,5 +72,16 @@
         <td>5</td>
       </tr>
     </table>
+    <footer class="footer">
+      <div class="footer-content">
+        <p>Siga-nos nas redes sociais!</p>
+
+        <div class="social-link">
+          <img src="https://image.flaticon.com/icons/png/512/25/25305.png" />
+          <img src="https://image.flaticon.com/icons/png/512/25/25425.png" />
+          <img src="https://image.flaticon.com/icons/png/512/8/8800.png" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
