adciona css das paginas funcionarios e controle-estoque

--- a/quinzena3/sistema-loja/ctrl-estoque.html
+++ b/quinzena3/sistema-loja/ctrl-estoque.html
@@ -24,54 +24,65 @@
         </ul>
       </nav>
     </div>
-    <div>
+    <div class="ctl-estoque">
+      <div class="ctl-estoque-header">
+        <h2>Controle de Estoque</h2>
+        <button>Novo Produto</button>
+      </div>
 
-    <h2>Controle de Estoque</h2>
+      <table class="table-estoque">
+        <tr>
+          <th>Foto</th>
+          <th>Descrição</th>
+          <th>Preço (R$)</th>
+          <th>Quantidade disponível</th>
+        </tr>
 
-    <table>
-      <tr>
-        <th>Foto</th>
-        <th>Descrição</th>
-        <th>Preço (R$)</th>
-        <th>Quantidade disponível</th>
-      </tr>
+        <tr>
+          <td>
+            <img src="img/camisa-palmeiras.jpg" alt="Camisa do Palmeiras" />
+          </td>
+          <td>Camisa Palmeiras</td>
+          <td>200,00</td>
+          <td>20</td>
+        </tr>
 
-      <tr>
-        <td><img src="img/kunai.jpg" alt="Kunai naruto" /></td>
-        <td>Kunai básica ninja</td>
-        <td>300,00</td>
-        <td>20</td>
-      </tr>
+        <tr>
+          <td>
+            <img src="img/camisa-liverpol.jpg" alt="Camisa do Liverpol" />
+          </td>
+          <td>Camisa Liverpol</td>
+          <td>250,00</td>
+          <td>47</td>
+        </tr>
 
-      <tr>
-        <td><img src="img/bandana.jpg" alt="Bandana Naruto" /></td>
-        <td>Bandana Aldeia da Folha</td>
-        <td>200,00</td>
-        <td>47</td>
-      </tr>
+        <tr>
+          <td>
+            <img src="img/camisa-flamengo.jpg" alt="Camisa do Flamengo" />
+          </td>
+          <td>Camisa do Flamengo</td>
+          <td>120,00</td>
+          <td>22</td>
+        </tr>
 
-      <tr>
-        <td><img src="img/shuriken.jpg" alt="Shuriken Naruto" /></td>
-        <td>Shuriken Essencial</td>
-        <td>350,00</td>
-        <td>22</td>
-      </tr>
+        <tr>
+          <td><img src="img/camisa-adidas.jpg" alt="Camisa da Adidas" /></td>
+          <td>Camisa Adidas</td>
+          <td>140,00</td>
+          <td>10</td>
+        </tr>
 
-      <tr>
-        <td><img src="img/kunai-minato.jpg" alt="Kunai Minato Naruto" /></td>
-        <td>Kunai Minato</td>
-        <td>600,00</td>
-        <td>10</td>
-      </tr>
-
-      <!-- Crie mais uma linha desta tabela abaixo \/ -->
-      <tr>
-        <td><img src="img/capa-hokage.jpg" alt="Capa Hokage Naruto" /></td>
-        <td>Capa Hokage</td>
-        <td>1000,00</td>
-        <td>5</td>
-      </tr>
-    </table>
+        <!-- Crie mais uma linha desta tabela abaixo \/ -->
+        <tr>
+          <td>
+            <img src="img/camisa-sport.jpg" alt="Camisa do Sport Recife" />
+          </td>
+          <td>Camisa Sport Recife</td>
+          <td>120,00</td>
+          <td>5</td>
+        </tr>
+      </table>
+    </div>
     <footer class="footer">
       <div class="footer-content">
         <p>Siga-nos nas redes sociais!</p>
