--- a/quinzena3/sistema-loja/funcionarios.html
+++ b/quinzena3/sistema-loja/funcionarios.html
@@ -24,18 +24,65 @@
         </ul>
       </nav>
     </div>
-    <div>
+    <div class="funcionarios">
+      <h2>Funcionários</h2>
+      <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
+      <ul class="lista-funcionarios">
+        <li>
+          <img src="img/man.png" alt="Avatar" />
+          <div>
+            <span>José</span>
+            <span>(99) 9999-8888</span>
+            <span><a href="#">jose@mail.com</a> </span>
+          </div>
+        </li>
 
-    <h2>Funcionários</h2>
-    <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-    <ul type="square">
-      <li>Naruto</li>
-      <li>Sasuke</li>
-      <li>Hinata</li>
-      <li>Sakura</li>
-      <li>Shikamaru</li>
-    </ul>
+        <li>
+          <img src="img/woman.png" alt="Avatar" />
+          <div>
+            <span>Maria</span>
+            <span>(99) 9999-8888</span>
+            <span><a href="#">maria@mail.com</a> </span>
+          </div>
+        </li>
 
+        <li>
+          <img src="img/man.png" alt="Avatar" />
+          <div>
+            <span>João</span>
+            <span>(99) 9999-8888</span>
+            <span><a href="#">joao@mail.com</a> </span>
+          </div>
+        </li>
+
+        <li>
+          <img src="img/man.png" alt="Avatar" />
+          <div>
+            <span>Pedro</span>
+            <span>(99) 9999-8888</span>
+            <span><a href="#">pedro@mail.com</a> </span>
+          </div>
+        </li>
+
+        <li>
+          <img src="img/woman.png" alt="Avatar" />
+          <div>
+            <span>Joana</span>
+            <span>(99) 9999-8888</span>
+            <span><a href="#">joana@mail.com</a> </span>
+          </div>
+        </li>
+
+        <li>
+          <img src="img/woman.png" alt="Avatar" />
+          <div>
+            <span>Joaquina</span>
+            <span>(99) 9999-8888</span>
+            <span><a href="#">joaquina@mail.com</a> </span>
+          </div>
+        </li>
+      </ul>
+    </div>
     <footer class="footer">
       <div class="footer-content">
         <p>Siga-nos nas redes sociais!</p>
